feat: :sparkles: add auth module
