# Dtos/Parameters/AuthLoginParameter.cs
@@ -1,0 +1,12 @@
+using System.ComponentModel.DataAnnotations;
+
+namespace dotnet_smk_telkom_2025.Dtos.Parameters;
+
+public class AuthLoginParameter
+{
+  [Required]
+  public string Email { get; set; }
+
+  [Required]
+  public string Password { get; set; }
+}
