# Dtos/Parameters/UserCreateParameter.cs
@@ -1,3 +1,4 @@
+using BC = BCrypt.Net.BCrypt;
 using System.ComponentModel.DataAnnotations;
 using dotnet_smk_telkom_2025.Models;
 
@@ -9,15 +10,20 @@ public class UserCreateParameter
   [StringLength(100, MinimumLength = 3)]
   public string Name { get; set; }
 
+  [Required]
   [EmailAddress]
   public string Email { get; set; }
+
+  [Required]
+  public string Password { get; set; }
 
   public static User ToModel(UserCreateParameter parameter)
   {
     return new User
     {
       Name = parameter.Name,
-      Email = parameter.Email
+      Email = parameter.Email,
+      Password = BC.HashPassword(parameter.Password)
     };
   }
 }
