# Models/User.cs
@@ -4,6 +4,7 @@ public class User : Base
 {
   public string Name { get; set; }
   public string Email { get; set; }
+  public string Password { get; set; }
 
   /* ------------------------------- Relational ------------------------------- */
   public virtual ICollection<Post> Posts { get; set; }
